[package]
name = "livemd"
version = "0.1.3"
edition = "2021"
description = "A Markdown streaming tool for terminals"
license = "MIT"
repository = "https://github.com/victoria-riley-barnett/livemd"
homepage = "https://github.com/victoria-riley-barnett/livemd"
documentation = "https://github.com/victoria-riley-barnett/livemd"
keywords = ["markdown", "terminal", "streaming", "cli", "rust"]
categories = ["command-line-utilities", "text-processing"]
authors = ["Victoria Barnett <victoria.022@proton.me>"]

[[bin]]
name = "livemd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
pulldown-cmark = "0.13.0"
regex = "1.12.2"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
termimad = "0.34"
atty = "0.2"
shell-words = "1.1.0"
